k8s/auth-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-server
spec:
    replicas: 2
    selector:
        matchLabels:
            app: auth-server
    template:
        metadata:
            labels:
                app: auth-server
        spec:
            containers:
                - name: auth-server
                  image: auth-server:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 3000
