k8s/auth-server/auth-server-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: auth-server
spec:
    selector:
        app: auth-server
    ports:
        - port: 80
          targetPort: 3000
    type: LoadBalancer
