k8s/auth-server/auth-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: auth-ingress
spec:
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: auth-server
                            port:
                                number: 80
